Added scopes for isolation boxes type containers of memories.
Created TypeScript SDK

Updated Documentation
